Added a mock up page dor doctors

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+<mdb-navbar SideClass="navbar red darken-1 navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
   <mdb-navbar-brand>
     <a class="logo navbar-brand waves-light" mdbWavesEffect><strong>MDB</strong></a>
   </mdb-navbar-brand>
