--- a/src/app/homepage-doctor/homepage-doctor.component.scss
+++ b/src/app/homepage-doctor/homepage-doctor.component.scss
@@ -2,7 +2,7 @@
   height: unset !important;
 }
 .intro-2 {
-  background: url("http://mdbootstrap.com/img/Photos/Others/img%20(42).jpg")no-repeat center center;
+  background: url("../../assets/images/background_image.jpg")no-repeat center center;
   background-size: cover;
 }
 .view {
