--- a/src/app/welcome-screen/welcome-screen.component.scss
+++ b/src/app/welcome-screen/welcome-screen.component.scss
@@ -2,8 +2,8 @@
   height: unset !important;
 }
 .intro-2 {
-  background: url("https://yuvamauritius.com/wp-content/uploads/2015/08/desktopwallpaper-2.png")no-repeat center center;
-  //background: url("../../assets/images/background image.png")no-repeat center center;
+  //background: url("https://yuvamauritius.com/wp-content/uploads/2015/08/desktopwallpaper-2.png")no-repeat center center;
+  background: url("../../assets/images/background_image.jpg")no-repeat center center;
   background-size: cover;
 }
 .view {
