--- a/src/app/homepage-doctor/homepage-doctor.component.html
+++ b/src/app/homepage-doctor/homepage-doctor.component.html
@@ -1,12 +1,77 @@
-<header class="intro-header">
-  <!--Intro Section-->
-  <section class="view intro-2">
-    <div class="full-bg-img mask rgba-gradient">
-      <div class="container flex-center">
-        <h1>I am a doctor</h1>
+<div class="container" style="margin-top: 150px">
+  <div class="nav justify-content-center py-4" style="background-color: #3f51b5">
+    <p class="red-text">Exista 213 litri de sange in 14 unitati!</p>
+  </div>
+  <nav class="nav nav-pills mdb-color lighten-4 py-1 nav-fill">
+    <a class="nav-item m-1 nav-link active" (click)="changeToDonationsStatus()">Vezi statusurile donarilor</a>
+    <a class="nav-item m-1 nav-link active" (click)="changeToForm()">Completeaza chestionar pentru cerere de sange</a>
+  </nav>
+</div>
+<!--DIV FOR "COMPLETEAZA CHESTIONAR-->
+<div class="container grey lighten-4">
 
-      </div>
+  <!--DIV FOR "COMPLETEAZA CHESTIONAR-->
+  <div *ngIf="isLastDonations()">
+    <h3>Buna stimabile Doctor! Mai jos statusurile donarilor!</h3>
+    <div *ngFor="let dStatus of donationStatus">
+      {{dStatus.patientInNeed}}
+      {{dStatus.patientDetails}}
+      {{dStatus.quantityAvailable}} of {{dStatus.quantityRequired}} gathered
     </div>
-  </section>
+  </div>
 
-</header>
+
+  <div *ngIf="isForm()">
+    <h1>Pentru a va verifica eligibilitatea pentru donarea de sange va rugam sa completati chestionarul urmator</h1>
+    <!-- Default form register -->
+    <form class="text-center border border-light p-5">
+
+      <p class="h4 mb-4">Sign up</p>
+
+      <div class="form-row mb-4">
+        <div class="col">
+          <!-- First name -->
+          <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name">
+        </div>
+        <div class="col">
+          <!-- Last name -->
+          <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name">
+        </div>
+      </div>
+
+      <!-- E-mail -->
+      <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail">
+
+      <!-- Password -->
+      <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock">
+      <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
+        At least 8 characters and 1 digit
+      </small>
+
+      <!-- Phone number -->
+      <input type="text" id="defaultRegisterPhonePassword" class="form-control" placeholder="Phone number" aria-describedby="defaultRegisterFormPhoneHelpBlock">
+      <small id="defaultRegisterFormPhoneHelpBlock" class="form-text text-muted mb-4">
+        Optional - for two step authentication
+      </small>
+
+      <!-- Newsletter -->
+      <div class="custom-control custom-checkbox">
+        <input type="checkbox" class="custom-control-input" id="defaultRegisterFormNewsletter">
+        <label class="custom-control-label" for="defaultRegisterFormNewsletter">Subscribe to our newsletter</label>
+      </div>
+
+      <!-- Sign up button -->
+      <button class="btn btn-info my-4 btn-block" type="submit">Sign in</button>
+      <hr>
+
+      <!-- Terms of service -->
+      <p>By clicking
+        <em>Sign up</em> you agree to our
+        <a href="" target="_blank">terms of service</a> and
+        <a href="" target="_blank">terms of service</a>. </p>
+
+    </form>
+    <!-- Default form register -->
+  </div>
+  <!--DIV FOR "COMPLETEAZA CHESTIONAR-->
+</div>
