--- a/src/app/homepage-donor/homepage-donor.component.html
+++ b/src/app/homepage-donor/homepage-donor.component.html
@@ -1,12 +1,102 @@
-<header class="intro-header">
-  <!--Intro Section-->
-  <section class="view intro-2">
-    <div class="full-bg-img mask rgba-gradient">
-      <div class="container flex-center">
-        <h1>I am a donor</h1>
 
+<div class="container" style="margin-top: 150px">
+  <div class="nav justify-content-center py-4" style="background-color: #3f51b5">
+    <p class="red-text">Ai donat ultima data acum 10 zile</p>
+  </div>
+  <nav class="nav nav-pills mdb-color lighten-4 py-1 nav-fill">
+    <a class="nav-item m-1 nav-link active" (click)="changeToForm()">Completeaza chestionar</a>
+    <a class="nav-item m-1 nav-link active" (click)="changeToLastDonations()">Vezi donarile anterioare</a>
+  </nav>
+</div>
+<!--DIV FOR "COMPLETEAZA CHESTIONAR-->
+<div class="container grey lighten-4">
+  <div *ngIf="isForm()">
+    <h1>Pentru a va verifica eligibilitatea pentru donarea de sange va rugam sa completati chestionarul urmator</h1>
+    <!-- Default form register -->
+    <form class="text-center border border-light p-5">
+
+      <p class="h4 mb-4">Sign up</p>
+
+      <div class="form-row mb-4">
+        <div class="col">
+          <!-- First name -->
+          <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name">
+        </div>
+        <div class="col">
+          <!-- Last name -->
+          <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name">
+        </div>
       </div>
-    </div>
-  </section>
 
-</header>
+      <!-- E-mail -->
+      <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail">
+
+      <!-- Password -->
+      <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock">
+      <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
+        At least 8 characters and 1 digit
+      </small>
+
+      <!-- Phone number -->
+      <input type="text" id="defaultRegisterPhonePassword" class="form-control" placeholder="Phone number" aria-describedby="defaultRegisterFormPhoneHelpBlock">
+      <small id="defaultRegisterFormPhoneHelpBlock" class="form-text text-muted mb-4">
+        Optional - for two step authentication
+      </small>
+
+      <!-- Newsletter -->
+      <div class="custom-control custom-checkbox">
+        <input type="checkbox" class="custom-control-input" id="defaultRegisterFormNewsletter">
+        <label class="custom-control-label" for="defaultRegisterFormNewsletter">Subscribe to our newsletter</label>
+      </div>
+
+      <!-- Sign up button -->
+      <button class="btn btn-info my-4 btn-block" type="submit">Sign in</button>
+      <hr>
+
+      <!-- Terms of service -->
+      <p>By clicking
+        <em>Sign up</em> you agree to our
+        <a href="" target="_blank">terms of service</a> and
+        <a href="" target="_blank">terms of service</a>. </p>
+
+    </form>
+    <!-- Default form register -->
+  </div>
+  <!--DIV FOR "COMPLETEAZA CHESTIONAR-->
+  <div *ngIf="isLastDonations()">
+    <h3>Buna stimabile Domn! Mai jos gasiti donarile dumneavoastra!</h3>
+    <table class="table table-bordered mt-4">
+      <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Pentru cine ai donat</th>
+        <th scope="col">Data donarii</th>
+        <th scope="col">Clinica</th>
+        <th scope="col">Detalii</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let pastDonation of lastDonations">
+        <th scope="row">{{lastDonations.indexOf(pastDonation)}}</th>
+        <td>{{pastDonation.patientFullName}}</td>
+        <td>{{pastDonation.date}}</td>
+        <td>{{pastDonation.clinic}}</td>
+        <td>{{pastDonation.details}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <!--DIV FOR "COMPLETEAZA CHESTIONAR-->
+  <div>
+    loc de donat
+  </div>
+  <div>
+    loc de donat
+  </div>
+  <div>
+    loc de donat
+  </div>
+  <div>
+    loc de donat
+  </div>
+</div>
