--- a/src/app/welcome-screen/welcome-screen.component.html
+++ b/src/app/welcome-screen/welcome-screen.component.html
@@ -119,16 +119,15 @@
                   </div>
 
                   <!--Body-->
-                  <h4>
+                  <h4 class="white-text">
                     Pentru ca iti pretuim timpul, nu mai este nevoie sa iti creezi cont.
                   </h4>
-                  <h4>
+                  <h4 class="white-text">
                     Logheaza-te folosind unul din conturile tale de retele sociale
                   </h4>
                   <div class="inline-ul text-center d-flex justify-content-center">
-                    <a (click)="signInWithFB()" class="icons-sm tw-ic px-4"><i class="fa fa-facebook white-text"></i></a>
-                    <a routerLink="/homepage-donor" class="icons-sm li-ic px-4"><i class="fa fa-linkedin white-text"> </i></a>
-                    <a routerLink="/homepage-donor" class="icons-sm ins-ic px-4"><i class="fa fa-instagram white-text"> </i></a>
+                    <a (click)="signInWithFB()" class="icons-sm tw-ic px-4"><i class="fa fa-facebook white-text fa-2x"><p class="h5 text-white">Login with facebook</p></i></a>
+                    <a routerLink="/homepage-donor" class="icons-sm li-ic px-4"><i class="fa fa-google white-text fa-2x"><p class="h5 text-white">Login with google</p></i></a>
                   </div>
 
                 </div>
