--- a/src/app/homepage-doctor/homepage-doctor.component.html
+++ b/src/app/homepage-doctor/homepage-doctor.component.html
@@ -12,7 +12,7 @@
 
   <!--DIV FOR "COMPLETEAZA CHESTIONAR-->
   <div *ngIf="isLastDonations()">
-    <h2>Behold, these are tha last donations</h2>
+    <h3 class="black-text text-center strong pt-4">Acestea sunt ultimele donatii</h3>
     <table class="table table-striped table-bordered mt-4">
       <thead class="black white-text">
       <tr>
@@ -45,56 +45,63 @@
   </div>
 
   <div *ngIf="isForm()">
-    <h1>Pentru a va verifica eligibilitatea pentru donarea de sange va rugam sa completati chestionarul urmator</h1>
+    <h3 class="black-text text-center strong p-4">Completati o cerere de sange</h3>
     <!-- Default form register -->
     <form class="text-center border border-light p-5">
 
-      <p class="h4 mb-4">Sign up</p>
-
+      <br>
+      <p class="h6 mb-4">Date pacient</p>
       <div class="form-row mb-4">
         <div class="col">
-          <!-- First name -->
-          <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name">
+          <!-- Last name -->
+          <input [(ngModel)]="bloodRequest.patientLastName" type="text" id="formLastName" name="defaultRegisterFormLastName" class="form-control" placeholder="Nume pacient">
         </div>
         <div class="col">
-          <!-- Last name -->
-          <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name">
+          <!-- First name -->
+          <input [(ngModel)]="bloodRequest.patientFirstName" type="text" id="formFirstName" name="defaultRegisterFormFirstName" class="form-control" placeholder="Prenume pacient">
+        </div>
+        <div class="col">
+          <!-- CNP -->
+          <input [(ngModel)]="bloodRequest.patientCNP" type="text" id="formCNP" name="defaultRegisterFormFirstName" class="form-control" placeholder="CNP">
         </div>
       </div>
 
-      <!-- E-mail -->
-      <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail">
+      <!-- Clinica -->
+      <p class="h6 mb-2">Nume clinica</p>
+      <div class="form-row mb-4">
 
-      <!-- Password -->
-      <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock">
-      <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
-        At least 8 characters and 1 digit
-      </small>
-
-      <!-- Phone number -->
-      <input type="text" id="defaultRegisterPhonePassword" class="form-control" placeholder="Phone number" aria-describedby="defaultRegisterFormPhoneHelpBlock">
-      <small id="defaultRegisterFormPhoneHelpBlock" class="form-text text-muted mb-4">
-        Optional - for two step authentication
-      </small>
-
-      <!-- Newsletter -->
-      <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="defaultRegisterFormNewsletter">
-        <label class="custom-control-label" for="defaultRegisterFormNewsletter">Subscribe to our newsletter</label>
+        <select [(ngModel)]="bloodRequest.patientClinic" name="patientClinic" class="browser-default custom-select">
+          <option value="" disabled selected>Choose your option</option>
+          <option *ngFor="let location of locations" value="{{locations.indexOf(location)}}">{{location.name}} de la adresa {{location.address}}</option>
+        </select>
       </div>
 
-      <!-- Sign up button -->
-      <button class="btn btn-info my-4 btn-block" type="submit">Sign in</button>
+      <!-- Cantitate necesara -->
+      <p class="h6 mb-2">Detalii cerere</p>
+      <div class="form-row mb-4">
+        <label>Pacientul are nevoie de: </label>
+        <input [(ngModel)]="bloodRequest.quantityRequired" name="quantity" id="quantity" type="number" value="0" class="form-control inputQuantity" placeholder="" aria-describedby="defaultQuantityHelpBlock">
+        <label> litri.</label>
+      </div>
+      <div class="form-row">
+
+        <label for="additionalDetails"><i class="fa fa-pencil prefix"></i>Introduceti detalii suplimentare</label>
+        <textarea [(ngModel)]="bloodRequest.details" type="text" name="additionalDetails" id="additionalDetails" class="md-textarea form-control" rows="3"></textarea>
+
+      </div>
+
+      <!-- Inregistreaza cererea -->
+      <div class="form-row">
+        <div class="col">
+          <button (click)="submitBloodRequest()" type="submit" class="btn btn-success my-4 btn-block">Inregistreaza cererea</button>
+        </div>
+        <div class="col">
+          <button type="reset" class="btn btn-danger my-4 btn-block">Sterge cererea</button>
+        </div>
+      </div>
+
       <hr>
-
-      <!-- Terms of service -->
-      <p>By clicking
-        <em>Sign up</em> you agree to our
-        <a href="" target="_blank">terms of service</a> and
-        <a href="" target="_blank">terms of service</a>. </p>
-
     </form>
-    <!-- Default form register -->
   </div>
   <!--DIV FOR "COMPLETEAZA CHESTIONAR-->
 </div>
