--- a/src/app/homepage-staff/homepage-staff.component.scss
+++ b/src/app/homepage-staff/homepage-staff.component.scss
@@ -43,4 +43,10 @@ h6 {
   .full-height header .view {
     height: 1040px;
   }
+
+}
+.inputQuantity {
+  max-width: 105px;
+  margin-right: 25px;
+  margin-left: 25px;
 }
